fixed text session quotes issue and posting issue on mobile version in chrome

--- a/Warhammer/Warhammer.Mvc/Content/RoleplayCss/Roleplay.css
+++ b/Warhammer/Warhammer.Mvc/Content/RoleplayCss/Roleplay.css
@@ -1412,6 +1412,7 @@ footer
         max-height: 150px;
         transition: all 0.2s linear;
         z-index: 999999;
+        position: relative;
     }
 
     .PlayerDiceControls
